project.clj: add-opens for sun.nio.sh, which is needed for some of the volt netty hacks